--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ header{
   /*flex: 0 50%; */
   max-width: 40%;
   text-wrap: wrap;
-  padding: 50px;
+  margin: 50px;
+  padding: 5px;
 }
 
 @media only screen and (max-width: 1500px) {
