--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ header{
   max-width: 40%;
   text-wrap: wrap;
   margin: 50px;
-  padding: 5px;
+  padding: 7px;
+  border: 2px solid white;
 }
 
 @media only screen and (max-width: 1500px) {
