--- a/style.css
+++ b/style.css
@@ -90,6 +90,9 @@ button:hover{
 
 .progress-container {
   width: 100%;
+  top: 0; 
+  left: 0; 
+  height: 5px;
   height: 3px;
   background: #454545;
 }
