--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button:hover{
   position: fixed;
   top: 0;
   z-index: 1;
-  /*width: 100%;*/
+  width: 100%;
   margin-right: 5%;
   background-color: #454545;
 }
