--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ button:hover{
   top: 0;
   z-index: 1;
   width: 100%;
-  margin-right: 5%;
+  /*margin-right: 5%;*/
   background-color: #454545;
 }
 
