--- a/style.css
+++ b/style.css
@@ -84,8 +84,9 @@ button:hover{
   position: fixed;
   top: 0;
   z-index: 1;
-  width: 100%;
-  /*margin-right: 5%;*/
+  display: flex;
+  /*width: 100%;*/
+  margin-right: 5%;
   background-color: #454545;
 }
 
@@ -98,7 +99,7 @@ button:hover{
 
 .progress-bar {
   height: 3px;
-  margin-right: 5%;
+  /*margin-right: 5%;*/
   background: aqua;
   width: 0%;
 }
