--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ button:hover{
 
 .progress-container {
   /*width: 100%;*/
-  margin-right: 5%;
+  /*margin-right: 5%;*/
   height: 3px;
   background: #454545;
 }
