--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   background-color: black;
   color: white;
   padding-bottom: 20px;
-   margin: 20px;
+  margin: 20px;
 }
 
 h1, h2{
@@ -84,6 +84,7 @@ button:hover{
   position: fixed;
   top: 0;
   z-index: 1;
+  padding: 5px;
   display: flex;
   /*width: 100%;*/
   margin-right: 5%;
