--- a/style.css
+++ b/style.css
@@ -86,13 +86,13 @@ button:hover{
   z-index: 1;
   padding: 5px;
   display: flex;
-  /*width: 100%;*/
+  width: 100%;
   margin-right: 5%;
   background-color: #454545;
 }
 
 .progress-container {
-  /*width: 100%;*/
+  width: 100%;
   /*margin-right: 5%;*/
   height: 3px;
   background: #454545;
