--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ button:hover{
 .progress-container {
   width: 100%;
   height: 3px;
+  margin-right: 5%;
   background: #454545;
 }
 
 .progress-bar {
   height: 3px;
-  margin-right: 5px;
   background: aqua;
   width: 0%;
 }
