--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ button:hover{
   position: fixed;
   top: 0;
   z-index: 999;
+  margin-right: 5%;
   width: 100%;
   background-color: #454545;
 }
@@ -98,6 +99,7 @@ button:hover{
 
 .progress-bar {
   height: 3px;
+  margin-right: 5%;
   background: aqua;
   width: 0%;
 }
